довлено меню бургер

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 // базовые подключения
 @import "components/reset";
-// @import "components/fonts";
+@import "components/fonts";
 @import "components/vars";
 @import "components/mixins";
 @import "components/settings";
