--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -9,7 +9,9 @@
 }
 
 .page {
-    font-family: var(--font-family, sans-serif);
+    font-family: var(--font-roboto);
+    font-weight: 400;
+    color: var(--color-mine);
 }
 
 .page__body {
@@ -36,6 +38,20 @@
     width: 100%;
     margin: 0 auto;
     padding: 0 var(--container-offset);
+}
+//=======================================================
+//      Адиптивное изображение
+//=======================================================
+.img{
+    position: relative;
+  img{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+  }
 }
 //=======================================================
 //      Сброс стилей кнопки
