--- a/src/scss/components/_vars.scss
+++ b/src/scss/components/_vars.scss
@@ -2,7 +2,9 @@
 $maxWidth: 1366px; //Размер макета
 $widthContainer: 1200px; //Размер блока контента
 $containerOffset: 10px; //Отступ безопасности
-$maxWidthContainer: calc($widthContainer + $containerOffset * 2); //Размер котейнера
+$maxWidthContainer: calc(
+    $widthContainer + $containerOffset * 2
+); //Размер котейнера
 
 // Break point
 $md1: $maxWidthContainer + $containerOffset;
@@ -12,14 +14,30 @@ $md4: 480px;
 
 // Переменные CSS
 :root {
-    // base
+    // Базовые настройки
     --max-widthContainer: #{$maxWidthContainer};
     --container-offset: #{$containerOffset};
-    --font-family: "Montserrat", sans-serif;
 
-    // colors
+    //Шрифты
+    --font-roboto: 'Roboto', sans-serif;
+    --font-montserrat: 'Montserrat';
+
+    // Цветовая схема
     --color-black: #000;
+    --color-black-tr: rgba(0, 0, 0, 0.7);
     --color-white: #fff;
     --color-ebony: #253342;
+    --color-ebony-clay: #1f2b38;
+    --color-alpine: #bb8e34;
+    --color-alpine-tr: rgba(187, 142, 52, 0.5);
+    --color-mine: #373737;
+    --color-slate: #798797;
+    --color-jungle: #27ae60;
+    --color-iron: #c9cccf;
+    --color-iron-tr: rgba(201, 204, 207, 0.2);
+    --color-gallery: #ececec;
 
-  }
+    //Тени
+    --shadow-logo: 0px -2px 6px rgba(252, 230, 119, 0.26);
+    --shadow-cart: 3px 4px 10px rgba(0, 0, 0, 0.4);
+}
