--- a/src/scss/parts/_header.scss
+++ b/src/scss/parts/_header.scss
@@ -3,8 +3,6 @@
     top: 0;
     left: 0;
     width: 100%;
-    @include adaptive-value('padding-top', 25, 20, 1);
-    @include adaptive-value('padding-bottom', 25, 20, 1);
     z-index: 15;
     transition: top 0.8s ease 0s;
     background-color: var(--color-ebony);
@@ -15,28 +13,299 @@
     }
     // .header__container
     &__container {
+        @include adaptive-value("padding-top", 20, 10, 1);
+        @include adaptive-value("padding-bottom", 20, 10, 1);
+    }
+    // .header__wrap
+    &__wrap {
         display: flex;
-        padding: 20px 0px;
+        @media (max-width: $md3) {
+            justify-content: space-between;
+        }
     }
     // .header__logo
     &__logo {
+        flex: 0 1 26.667%;
+        @include adaptive-value('padding-right', 10, 5, 1);
+        z-index: 5;
     }
     // .header__menu
     &__menu {
+        flex: 0 1 40%;
+        display: flex;
+        align-items: center;
+        @media (max-width: $md2) {
+            flex: 0 1 58.333%;
+        }
     }
     // .header__contacts
     &__contacts {
     }
     // .header__bureger
     &__bureger {
+        @media (min-width: $md3) {
+            display: none;
+            width: 0;
+        }
+        @media (max-width: $md3) {
+            position: relative;
+            flex: 0 1 30px;
+            display: flex;
+            align-items: center;
+        }
     }
 }
-.container {
-}
 .logo {
-
+    // .logo__link
+    &__link {
+        display: inline-flex;
+        align-items: center;
+        transform: scale(1);
+        transition: transform 0.3s ease 0s;
+        @media (any-hover: hover) {
+            &:hover {
+                transform: scale(0.98);
+            }
+        }
+    }
+    // .logo__img
+    &__img {
+        @include adaptive-value('width', 50, 30, 1);
+        @include adaptive-value('height', 50, 30, 1);
+        @include adaptive-value('margin-right', 20, 10, 1);
+    }
+    // .logo__text
+    &__text {
+        font-family: var(--font-montserrat);
+        font-weight: 600;
+        @include adaptive-value('font-size', 28, 18, 1);
+        color: var(--color-alpine);
+        text-shadow: var(--shadow-logo);
+        white-space: nowrap;
+    }
 }
 .menu {
+    // .menu__body
+    &__body {
+        width: 100%;
+        @media (max-width: $md3) {
+            height: 100%;
+            width: 100%;
+            position: fixed;
+            left: -100%;
+            top: 0;
+            background-color: var(--color-ebony);
+            padding: 100px 15px 30px 30px;
+            transition: left 0.3s ease 0s;
+            overflow: auto;
+            &.burger--active {
+                left: 0;
+            }
+            &::before {
+                position: fixed;
+                content: '';
+                @include adaptive-value('height', 100, 70, 1);
+                width: 100%;
+                left: 0;
+                top: 0;
+                background-color: var(--color-ebony);
+                z-index: 10;
+            }
+        }
+    }
+    // .menu__list
+    &__list {
+        display: flex;
+        justify-content: space-between;
+        @media (max-width: $md3) {
+            flex-wrap: wrap;
+            margin: 0px 0px 30px 0px;
+        }
+    }
+    // .menu__item
+    &__item {
+        position: relative;
+        &:not(:last-child) {
+            margin: 0px 10px 0px 0px;
+        }
+        @media (any-hover: hover) {
+            &:hover {
+                .dropdown {
+                    opacity: 1;
+                    visibility: visible;
+                    pointer-events: all;
+                }
+                .menu__text {
+                    color: var(--color-alpine);
+                    &::after {
+                        width: 100%;
+                    }
+                }
+                .menu__arrow {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+        @media (max-width: $md3) {
+            flex: 0 1 100%;
+            &:not(:last-child) {
+                margin: 0px 0px 20px 0px;
+            }
+        }
+    }
+    // .menu__button
+    // .menu__link
+    &__button,
+    &__link {
+        display: flex;
+        align-items: center;
+        @media (max-width: $md3) {
+            justify-content: space-between;
+            width: 100%;
+        }
+    }
+    // .menu__dropdown
+    &__dropdown {
+        @media (min-width: $md3) {
+            position: absolute;
+            left: -10px;
+            top: 100%;
+        }
+    }
+    // .menu__text
+    &__text {
+        position: relative;
+        font-family: var(--font-montserrat);
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 125%;
+        color: var(--color-slate);
+        white-space: nowrap;
+        transition: color 0.3s ease 0s;
+        &::before,
+        &::after {
+            position: absolute;
+            content: '';
+            left: 0;
+            bottom: -2px;
+            z-index: 5;
+        }
+        &::before {
+            width: 100%;
+            height: 1px;
+            background-color: var(--color-slate);
+        }
+        &::after {
+            width: 0;
+            height: 1px;
+            background-color: var(--color-alpine);
+            transition: width 0.3s ease 0s;
+        }
+    }
+    // .menu__arrow
+    &__arrow {
+        display: block;
+        width: 12px;
+        height: 7px;
+        @include adaptive-value('margin-left', 10, 5, 1);
+        transform: rotate(0deg);
+        transition: transform 0.5s ease 0s;
+    }
+}
+.icon-menu {
+    display: none;
+    @media (max-width: $md3) {
+        height: 18px;
+        width: 30px;
+        display: block;
+        position: absolute;
+        z-index: 5;
+        span {
+            height: 2px;
+            width: 100%;
+            position: absolute;
+            top: calc(50% - 1px);
+            left: 0px;
+            transition: all 0.3s ease 0s;
+            background-color: var(--color-alpine);
+            &:first-child {
+                top: 0px;
+            }
+            &:last-child {
+                top: auto;
+                bottom: 0px;
+            }
+        }
+        &.burger--active {
+            span {
+                transform: scale(0);
+                &:first-child {
+                    transform: rotate(-45deg);
+                    top: calc(50% - 1px);
+                }
+                &:last-child {
+                    transform: rotate(45deg);
+                    bottom: calc(50% - 1px);
+                }
+            }
+        }
+    }
+}
+.dropdown {
+    min-width: 300px;
+    padding: 10px;
+    background-color: var(--color-ebony);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.5s ease 0s;
+    pointer-events: none;
+    @media (max-width: $md3) {
+        min-width: auto;
+        height: 0;
+        padding: 0;
+    }
+    // .dropdown__list
+    // &__list {
+    // }
+    // .dropdown__item
+    &__item {
+        &:not(:last-child) {
+            margin: 0px 0px 10px 0px;
+        }
+    }
+    // .dropdown__link
+    &__link {
+        display: flex;
+        align-items: center;
+        @media (any-hover: hover) {
+            &:hover {
+                .dropdown__icon {
+                    width: 16px;
+                }
+                .dropdown__text {
+                    color: var(--color-alpine);
+                }
+            }
+        }
+    }
+    // .dropdown__text
+    &__text {
+        font-family: var(--font-montserrat);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 125%;
+        color: var(--color-slate);
+        transition: color 0.3s ease 0s;
+    }
+    // .dropdown__icon
+    &__icon {
+        display: block;
+        width: 11px;
+        height: 11px;
+        margin: 0px 5px 0px 0px;
+        fill: var(--color-jungle);
+        transition: all 0.3s ease 0s;
+    }
 }
 .contacts {
     // .contacts__header
