Добавлен fullscreen экран на главную страницу

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,10 +4,11 @@
 @import "components/vars";
 @import "components/mixins";
 @import "components/settings";
+@import "components/general";
 
 // подключения компонентов страницы
 @import "./parts/header";
 @import "./parts/footer";
 
 // подключения страниц
-
+@import "./pages/index/fullscreen";
