--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,3 +12,6 @@
 
 // подключения страниц
 @import "./pages/index/fullscreen";
+@import "./pages/index/abuot";
+@import "./pages/index/services";
+@import "./pages/index/brends";
