--- a/src/scss/pages/index/_fullscreen.scss
+++ b/src/scss/pages/index/_fullscreen.scss
@@ -100,6 +100,11 @@
 .slide-fullscreen {
     display: flex;
     flex-direction: column;
+    @media(any-hover: hover){
+        &:hover{
+            cursor: pointer;
+        }
+    }
     // .slide-fullscreen__title
     &__title {
         display: inline-block;
