доделан первый вариант стартовой страницы

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,8 @@
+/*
+Theme Name: OVS-Group
+Author: @M.A.N.
+Version: 1.0
+*/
 // базовые подключения
 @import "components/reset";
 @import "components/fonts";
