--- a/src/scss/pages/index/_brends.scss
+++ b/src/scss/pages/index/_brends.scss
@@ -28,13 +28,21 @@
         display: flex;
         align-items: center;
     }
-    // .brend-index__swiper
+    // .brends-index__swiper
     &__swiper {
         min-width: 0;
+        & .swiper-slide{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
     // .brends-index__controls
-    // &__controls {
-    // }
+    &__controls {
+        @media(max-width: $md3){
+            display: none;
+        }
+    }
     // .brends-index__pagination-wrap
     &__pagination-wrap {
         margin: 30px 0px 0px 0px;
@@ -65,7 +73,7 @@
     }
 }
 .controls-brends {
-    .swiper-button-disabled {
+    & .swiper-button-disabled {
         opacity: 0.5;
     }
     // .controls-brends__button-prev
@@ -77,10 +85,14 @@
     }
     // .controls-brends__button-prev
     &__button-prev{
-        margin: 0px 40px 0px 0px;
+        @media(min-width: $md4){
+            margin: 0px 40px 0px 0px;
+        }
     }
     // .controls-brends__button-next
     &__button-next {
-        margin: 0px 0px 0px 10px;
+        @media(min-width: $md4){
+            margin: 0px 0px 0px 10px;
+        }
     }
 }
