--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@ Version: 1.0
 // подключения компонентов страницы
 @import "./parts/header";
 @import "./parts/footer";
+@import "./parts/popup";
 
 // подключения страниц
 // Главная
