--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,3 +25,6 @@ Version: 1.0
 // О компании
 @import "./pages/about/about";
 @import "./pages/about/documents";
+// Контакты
+@import "./pages/contacts/contacts";
+@import "./pages/contacts/maps";
