--- a/src/scss/parts/_header.scss
+++ b/src/scss/parts/_header.scss
@@ -130,7 +130,7 @@
     // .menu__list
     &__list {
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         @media (max-width: $md3) {
             flex-wrap: wrap;
             margin: 0px 0px 30px 0px;
@@ -399,8 +399,8 @@
     }
     // .contacts-header__icon-mail
     &__icon-mail {
-        width: 18px;
-        height: 15px;
+        width: 25px;
+        height: 25px;
         @include adaptive-value('margin-right', 10, 5, 1);
     }
 }
