--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -50,7 +50,7 @@
       height: 100%;
       top: 0;
       left: 0;
-      object-fit: cover;
+      object-fit: contain;
   }
 }
 //=======================================================
