--- a/src/scss/pages/index/_services.scss
+++ b/src/scss/pages/index/_services.scss
@@ -1,6 +1,6 @@
 .services-index {
-    @include adaptive-value('padding-top', 100, 50, 1);
-    @include adaptive-value('padding-bottom', 100, 50, 1);
+    @include adaptive-value('padding-top', 50, 25, 1);
+    @include adaptive-value('padding-bottom', 50, 25, 1);
     background-color: var(--color-gallery);
     // .services-index__container
     &__container {
@@ -20,26 +20,32 @@
     }
     // .services-index__title
     &__title {
-        @include adaptive-value('margin-bottom', 50, 25, 1);
+        @include adaptive-value('margin-bottom', 25, 15, 1);
         text-align: center;
     }
     // .services-index__list
     &__list {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(4, 1fr);
         @media (max-width: $md2) {
-            flex-wrap: wrap;
+            grid-template-columns: repeat(3, 1fr);
+        }
+        @media(max-width: $md3){
+            grid-template-columns: repeat(2, 1fr);
         }
         @media (max-width: $md4) {
-            justify-content: center;
+            grid-template-columns: 1fr;
         }
     }
     // .services-index__item
     &__item {
-        flex: 0 1 22.5%;
+        flex: 0 1 var(--coll25);
         @media (max-width: $md2) {
-            flex: 0 1 30%;
-            margin: 0px 0px 50px 0px;
+            flex: 0 1 var(--coll33-md2);
+            &:nth-child(3){
+                margin: 0px 0px 0px 0px;
+            }
         }
         @media (max-width: $md3) {
             flex: 0 1 45%;
