--- a/src/scss/parts/_header.scss
+++ b/src/scss/parts/_header.scss
@@ -25,28 +25,35 @@
     }
     // .header__logo
     &__logo {
-        flex: 0 1 26.667%;
-        @include adaptive-value('padding-right', 10, 5, 1);
+        flex: 0 1 var(--coll25);
+        @media (max-width: $md2) {
+            flex: 0 1 var(--coll33-md2);
+        }
+        @media (max-width: $md3) {
+            flex: 0 1 75%;
+        }
+        margin-right: 20px;
         z-index: 5;
     }
     // .header__menu
     &__menu {
-        flex: 0 1 40%;
+        flex: 0 1 var(--coll-menu);
         display: flex;
         align-items: center;
+        margin-right: 20px;
         @media (max-width: $md2) {
-            flex: 0 1 58.333%;
+            flex: 0 1 var(--coll-menu-md2);
         }
-        @media(max-width: $md3){
+        @media (max-width: $md3) {
             flex: 0 1 0;
+            margin-right: 0;
         }
     }
     // .header__contacts
     &__contacts {
-        flex: 0 1 33.333%;
-        @include adaptive-value('padding-left', 10, 5, 1);
+        flex: 0 1 var(--coll33);
         @media (max-width: $md2) {
-            flex: 0 1 15%;
+            flex: 0 1 var(--coll12-md2);
         }
         @media (max-width: $md3) {
             flex: 0 1 100%;
@@ -84,15 +91,15 @@
     }
     // .logo__img
     &__img {
-        @include adaptive-value('width', 50, 30, 1);
-        @include adaptive-value('height', 50, 30, 1);
-        @include adaptive-value('margin-right', 20, 10, 1);
+        @include adaptive-value("width", 50, 30, 1);
+        @include adaptive-value("height", 50, 30, 1);
+        margin-right: 10px;
     }
     // .logo__text
     &__text {
         font-family: var(--font-montserrat);
         font-weight: 600;
-        @include adaptive-value('font-size', 28, 18, 1);
+        @include adaptive-value("font-size", 28, 18, 1);
         color: var(--color-alpine);
         text-shadow: var(--shadow-logo);
         white-space: nowrap;
@@ -117,8 +124,8 @@
             }
             &::before {
                 position: fixed;
-                content: '';
-                @include adaptive-value('height', 100, 53, 1);
+                content: "";
+                @include adaptive-value("height", 100, 50, 1);
                 width: 100%;
                 left: 0;
                 top: 0;
@@ -130,7 +137,6 @@
     // .menu__list
     &__list {
         display: flex;
-        // justify-content: space-between;
         @media (max-width: $md3) {
             flex-wrap: wrap;
             margin: 0px 0px 30px 0px;
@@ -140,7 +146,7 @@
     &__item {
         position: relative;
         &:not(:last-child) {
-            margin: 0px 10px 0px 0px;
+            margin: 0px 15px 0px 0px;
         }
         @media (any-hover: hover) {
             &:hover {
@@ -167,7 +173,11 @@
             }
         }
         &.drop--active {
-            margin: 0px 0px 0px 0px;
+            @media (min-width: $md3) {
+                &:not(:last-child) {
+                    margin: 0px 15px 0px 0px;
+                }
+            }
             .dropdown {
                 height: auto;
                 padding: 10px;
@@ -221,7 +231,7 @@
         &::before,
         &::after {
             position: absolute;
-            content: '';
+            content: "";
             left: 0;
             bottom: -2px;
             z-index: 5;
@@ -243,7 +253,7 @@
         display: block;
         width: 12px;
         height: 7px;
-        @include adaptive-value('margin-left', 10, 5, 1);
+        @include adaptive-value("margin-left", 10, 5, 1);
         transform: rotate(0deg);
         transition: transform 0.5s ease 0s;
     }
@@ -346,7 +356,7 @@
 .contacts-header {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     @media (max-width: $md3) {
         justify-content: flex-start;
     }
@@ -358,7 +368,7 @@
         display: flex;
         align-items: center;
         &:not(:last-child) {
-            @include adaptive-value('margin-right', 25, 15, 1);
+            @include adaptive-value("margin-right", 25, 15, 1);
         }
         @media (any-hover: hover) {
             &:hover {
@@ -379,7 +389,7 @@
     &__icon-phone {
         width: 15px;
         height: 20px;
-        @include adaptive-value('margin-right', 10, 5, 1);
+        @include adaptive-value("margin-right", 10, 5, 1);
     }
     // .contacts-header__text
     &__text {
@@ -401,6 +411,6 @@
     &__icon-mail {
         width: 25px;
         height: 25px;
-        @include adaptive-value('margin-right', 10, 5, 1);
+        @include adaptive-value("margin-right", 10, 5, 1);
     }
 }
