изменение главной страницы по новому шаблону

--- a/src/scss/components/_vars.scss
+++ b/src/scss/components/_vars.scss
@@ -29,6 +29,8 @@ $md4: 480px;
     --coll75: 74.6%;
     --coll-menu: 40.73%;
     --coll-menu-md2: 54.59%;
+    --coll10: 83.06%;
+    --coll12: 6.85%;
     --coll12-md2: 9.19%;
 
     //Шрифты
