доработка страниц О компании и контакты по новому шаблону

--- a/src/scss/components/_vars.scss
+++ b/src/scss/components/_vars.scss
@@ -19,11 +19,16 @@ $md4: 480px;
     --container-offset: #{$containerOffset};
 
     // Колонки
+    --coll15: 15.32%;
+    --coll15-md2: 20.54%;
+    --coll15-md3: 31.15%;
     --coll25: 23.79%;
     --coll33: 32.26%;
     --coll33-md2: 31.89%;
+    --coll43-md2: 43.24%;
     --coll50: 49.19%;
     --coll50-md2: 47.84%;
+    --coll65-md2: 65.57%;
     --coll67: 66.13%;
     --coll67-md2: 65.95%;
     --coll75: 74.6%;
